<?xml version="1.0" encoding="utf-8"?>

<!--Nim   : 10120917-->
<!--Nama  : Ristian Aditya-->
<!--Kelas : IF10K-->
<!--TGL   : 29-4-2023-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainLogin"
    android:background="@color/backgroundColor"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dimen_160dp"
        android:layout_height="@dimen/dimen_123dp"
        android:layout_marginStart="@dimen/dimen_123dp"
        android:layout_marginTop="@dimen/dimen_140dp"
        android:layout_marginEnd="@dimen/dimen_123dp"
        app:layout_constraintEnd_toEndOf="@id/editUsername"
        app:layout_constraintStart_toStartOf="@id/editUsername"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_welcome_logo" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editUsername"
        android:layout_marginTop="@dimen/dimen_32dp"
        style="@style/inputEditTextLogin"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editPassword"
        style="@style/inputEditTextLogin"
        android:layout_marginStart="@dimen/dimen_104dp"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:layout_marginEnd="@dimen/dimen_98dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUsername" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_28dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:text="@string/login"
        style="@style/buttonLoginOutlined"
        app:layout_constraintEnd_toEndOf="@id/editPassword"
        app:layout_constraintStart_toStartOf="@id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="@dimen/dimen_66dp"
        android:layout_height="@dimen/dimen_26dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_15sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFacebook"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        style="@style/buttonLoginOutlined"
        app:icon="@drawable/ic_welcome_fb_login"
        app:iconSize="@dimen/dimen_35dp"
        app:iconTint="@color/white"
        android:text="@string/facebook"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="@id/buttonLogin"
        app:layout_constraintStart_toStartOf="@id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="@dimen/dimen_210dp"
        android:layout_height="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonFacebook"
        app:layout_constraintStart_toStartOf="@+id/buttonFacebook"
        app:layout_constraintTop_toBottomOf="@+id/buttonFacebook"
        android:orientation="horizontal"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/dimen_145dp"
            android:layout_height="@dimen/dimen_22dp"
            android:gravity="center"
            style="@style/textRobotoLight"
            android:text="@string/akun"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textButtonRegister"
            android:layout_width="@dimen/dimen_55dp"
            android:layout_height="@dimen/dimen_22dp"
            android:gravity="center"
            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>